Search Results and Filters

--- a/frontend2/src/templates/index.html
+++ b/frontend2/src/templates/index.html
@@ -21,7 +21,7 @@
     <a href="basic-list.html" class="button">Basic List</a>
     <a href="directory.html" class="button">Directory</a>
     <a href="directory-entries.html" class="button">Directory Entries</a>
-    <a href="search.html" class="button">Search (Zero)</a>
+    <a href="search.html" class="button">Search</a>
     <a href="homepage.html" class="button">Homepage</a>
     <a href="parking.html" class="button">Parking</a>
     <a href="experience.html" class="button">Experience</a>
