Fixed search width bug

--- a/frontend2/src/scss/components/_results.scss
+++ b/frontend2/src/scss/components/_results.scss
@@ -81,6 +81,10 @@
         color: $dark-gray;
       }
 
+      &-meta {
+        flex-grow: 1;
+        width: 100%;
+      }
       &-image {
         padding-bottom: $spacing;
         img {
